--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         <li>Docker</li>
         <li>Ansible</li>
         <li>Integração Contínua</li>
+        <li>Teste</li>
+
     </ul>
 </body>
 </html>
