--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <li>Vagrant</li>
         <li>Docker</li>
         <li>Ansible</li>
-        <li>Integração Contínua</li>
+        <li>Integração Contínua - Software</li>
         <li>Teste</li>
 
     </ul>
